# c_proj_starter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/analysis/: CodeCoverage.cmake  clang-format.cmake  clang-tidy.cmake  code-coverage.cmake
include/: strio.h  utils_common.h
scripts/: clang_format.sh  clang_tidy.sh  test_coverage.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/strio/: CMakeLists.txt  strio.c
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/strio/: CMakeLists.txt  test_strio.c
